src/objects/Account_Notice__c.object
<CustomObject>
    <fields>
        <fullName>Account_Notice_Id__c</fullName>
        <description>Unique Identifier for Account Notices</description>
        <externalId>true</externalId>
        <label>Account Notice Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Account Notices</relationshipLabel>
        <relationshipName>Account_Notices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Notices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <description>Contains the old Salesforce ID</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Log_Date__c</fullName>
        <label>Legacy Log Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Log_a_Call__c</fullName>
        <formula>HYPERLINK 


(&apos;/00T/e?title=Call&amp;what_id=&apos; + Financial_Account__r.Id + &apos;&amp;followup=1&amp;tsk5=Account+Notice+Call&amp;tsk12=Completed&amp;tsk6=Account+Notice:+&apos; + SUBSTITUTE( TEXT(Type__c) &amp; &apos; - &apos; &amp; Description__c ,&apos; &apos;, &apos;+&apos;), &apos;Log Call Against Financial Account&apos;, &apos;_top&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log a Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Anniversary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Notice</label>
    <nameField>
        <displayFormat>Notice {00000}</displayFormat>
        <label>Account Notice</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Notices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>